# example-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: auth.py  main.py
