[tool.poetry]
name = "example-api"
version = "0.1.0"
description = ""
authors = ["Christian Meter <christian@schnaq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
loguru = "^0.7.2"
fastapi-cors = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
